--- a/style.css
+++ b/style.css
@@ -4,9 +4,17 @@
     padding: 0;
 }
 
+body {
+    background: url(assets/images/background.png);
+    background-blend-mode: color;
+}
+
 /* Navbar Styles */
 .navbar {
-    background: radial-gradient(circle, black, rgb(20, 0, 43));
+    background: rgba(42, 42, 42, 0.5);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
     display: flex;
     position: fixed;
     top: 0;
@@ -15,11 +23,12 @@
     border-bottom: 1px solid rgb(39, 39, 39);
     z-index: 2;
 }
+
 .navbar.trans {
     background-color: rgba(50, 50, 50, 0.8);
     backdrop-filter: blur(10px);
 }
-
+ 
 .logo {
     height: 70px;
     border-radius: 70px;
@@ -55,6 +64,7 @@
     transition: color 0.2s;
     font-size: larger;
 }
+
 .nav-link:hover {
     color: rgb(184, 184, 184);
 }
@@ -67,6 +77,7 @@
     margin-top: 15px;
     transition: transform 0.2s;
 }
+
 .searchInput:focus-visible {
     outline: none;
     transform: scale(1.05);
@@ -82,6 +93,7 @@
     transition: background-color 0.2s, box-shadow 0.2s;
     margin-left: 5px;
 }
+
 .searchBtn:hover {
     background-color: #c227ffbc;
     box-shadow: 0 0 10px #c227ffbc;
@@ -90,53 +102,121 @@
 /* Content Styles */
 .content {
     position: relative;
-    margin-top: 70px; /* Adjusted for fixed navbar */
+    margin-top: 70px;
+    /* Adjusted for fixed navbar */
 }
 
 .left {
-    padding: 20px 0;
-    width: 75vw;
+    padding: 5rem 0; 
+    width: 79vw;
     display: flex;
     position: absolute;
-    left: 25vw;
+    left: 21vw;
     overflow-y: scroll;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap; 
+    height: 100vh;
+    
 }
+.left::-webkit-scrollbar {
+    width: 12px; 
+  }
+  
+  .left::-webkit-scrollbar-track {
+    background: #1e1e1e; 
+    border-radius: 10px; 
+  }
+  
+  .left::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border-radius: 10px; 
+    border: 3px solid #1e1e1e; 
+  }
+  
+  .left::-webkit-scrollbar-thumb:hover {
+    background-color: #888; 
+  }
+  
+  .left {
+    scrollbar-width: thin;
+    scrollbar-color: #555 #1e1e1e;
+  }
 
 /* Card Styles */
 .card {
     display: flex;
     flex-direction: column;
-    width: 175px;
-    height: 250px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.524);
-    transition: all 0.3s;
+    width: 19rem;
+    height: 25rem;
+    border-radius: 10px;
+    transition: box-shadow  0.3s ease-in-out; 
+    position: relative;
+    backdrop-filter: blur(5px); 
+    background-color: #121214;
 }
+.h-r:hover{
+    border: 1px solid rgb(111, 0, 255);
+    box-shadow: 0 0 20px 2px rgb(111, 0, 255);
+}
+
 .card img {
-    align-self: center;
+    align-self: center; 
     max-width: 90%;
-    max-height: 90%;
-    border-radius: 5px;
+    max-height: 50%;
     object-fit: cover;
+    margin-top: 10px;
+    border-radius: 7px;
+}
+
+.card-cont {
     padding: 10px;
+    position: absolute;
+    top: 60%;
 }
-.card-cont{
-    padding: 10px;
+
+.address {
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(170, 170, 170);
 }
-.name{
-    font-weight: bold;
+
+.name {
+    font-weight: 500;
+    font-size: 16px;
+    color: rgb(241, 241, 241);
 }
+
+.distance {
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(170, 170, 170);
+}
+
 /* search card */
-.search-card{
+.search-card {
+    font-size: 24px;
     display: flex;
     width: 90%;
+    display: flex;
+    border-radius: 7px;
+    background-color: #121214;
+    backdrop-filter: blur(12);
 }
-.search-card-cont{
-       
+
+.search-card img {
+    margin: auto;
+    max-width: 40%;
+    border-radius: 7px;
+    padding: 20px 0;
 }
+
+.search-card-cont {
+    width: 50%;
+    padding-top: 40px;
+}
+
 /* Sidebar Styles */
 .hamburger {
     display: none;
@@ -144,9 +224,9 @@
 }
 
 .ham {
-    width: 25vw;
+    width: 20vw;
     height: 100vh;
-    background: linear-gradient(90deg, rgb(11, 0, 24), rgb(0, 0, 0));
+    background: rgb(29, 29, 29);
     padding-top: 70px;
     position: fixed;
     transition: all 0.3s;
@@ -159,34 +239,69 @@
     .left {
         width: 100vw;
         left: 0;
-        margin: 50px auto;
+        justify-content: center;
+
     }
+
     .navbar-nav {
         display: none;
     }
+
     .hamburger {
         display: block;
     }
+
     .ham {
-        display: none;
         width: 90vw;
         height: 100vh;
+        left: -90vw;
     }
+
     .logo {
         height: 50px;
     }
+
     .searchInput {
         padding: 5px;
         width: 8rem;
+        margin-top: 10px;
+
     }
+
     .searchBtn {
         padding: 5px;
     }
+
     .cont1 {
         gap: 5px;
+    }
+
+    .card {
+        width: 90vw;
+        height: 90vw;
+    }
+
+    .card img {
+        width: 90%;
+        max-height: 50%;
+    }
+
+    .search-card {
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .search-card img {
+        max-width: 90%;
+        margin: auto;
+    }
+
+    .search-card-cont {
+        padding: 10px;
+        font-size: 18px;
     }
 }
 
 .hide {
-    display: block;
+    left: 0;
 }
